# kserve-operators

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  kubeconfig.tmp  new_config  pyproject.toml  tox.ini
.github/: automatic_backport_tracks.yaml
.github/workflows/: ci.yaml  get-charm-paths.sh  integrate.yaml  integration.yaml  on_pull_request.yaml  promote.yaml  publish.yaml  release.yaml  tiobe_scan.yaml  tiobe_scan.yml
charms/kserve-controller/: .gitignore  CONTRIBUTING.md  README.md  charmcraft.yaml  config.yaml  kubeconfig.tmp  metadata.yaml  new_config  pyproject.toml  requirements-fmt.txt  requirements-integration.in  requirements-integration.txt  requirements-lint.txt  requirements-unit.in  requirements-unit.txt  requirements.in  requirements.txt  tox.ini
charms/kserve-controller/src/: certs.py  charm.py  default-custom-images.json
charms/kserve-controller/temp-certs/: ca.crt  ca.key  ca.srl  extfile.cnf  server.crt  server.csr  server.key
charms/kserve-llmisvc/: .coverage  OBSERVABILITY.md  config.yaml  coverage.xml  metadata.yaml  pyproject.toml  tox.ini
charms/kserve-web-app/: README.md  config.yaml  metadata.yaml  requirements-fmt.txt  requirements-integration.in  requirements-integration.txt  requirements-lint.txt  requirements-unit.txt  requirements.in  requirements.txt  tox.ini
charms/lws-controller/: .coverage  README.md  charmcraft.yaml  config.yaml  coverage.xml  metadata.yaml  pyproject.toml  tox.ini
tests/integration/: conftest.py  test_bundle.py
tests/integration/helpers/: k8s.py  (+9 more)
tools/: get-images-1.7-stable.sh  get-images.sh
(+102 files in other folders)
