[project]
name = "kserve-operators"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry.group]

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
black = "^26.0.0"
isort = "^8.0.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^26.0.0"
flake8 = "^7.3.0"
isort = "^8.0.0"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
jubilant = "^0.4.1"
lightkube = "^0.17.1"
pytest = "^8.4.1"
requests = "^2.32.4"
tenacity = "^9.1.2"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
